#9 Added/updated enums BlobLinkType, FieldAccess, QuoteVersionButtonAction, QuoteVersionState, TicketMessageCategory, UdefJustirication, VideoMeetingStatus

--- a/docs/api-reference/CRMScript.NetServer.AppointmentType.yml
+++ b/docs/api-reference/CRMScript.NetServer.AppointmentType.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.AppointmentType
+  # Same as SuperOffice.Data.AppointmentType
   commentId: T:CRMScript.NetServer.AppointmentType
   id: AppointmentType
   langs:
