--- a/docs/api-reference/CRMScript.NetServer.ChatSessionStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.ChatSessionStatus.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.ChatSessionStatus
+  # Same as SuperOffice.Data.ChatSessionStatus
   commentId: T:CRMScript.NetServer.ChatSessionStatus
   id: ChatSessionStatus
   langs:
