--- a/docs/api-reference/CRMScript.NetServer.ChatWidgetSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.ChatWidgetSize.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.ChatWidgetSize
+  # Same as SuperOffice.Data.ChatWidgetSize
   commentId: T:CRMScript.NetServer.ChatWidgetSize
   id: ChatWidgetSize
   langs:
