--- a/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
@@ -58,14 +58,14 @@ items:
   nameWithType: NSFieldMetadata.GetAccess()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetAccess()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Normal</li><li>Enum: 1 = Mandatory</li><li>Enum: 2 = ReadOnly</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAccess()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Access restrictions on the field
+      description: Access restrictions on the field. See <xref href=\"FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFieldMetadata thing;\nInteger access = thing.GetAccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldMetadata.GetDefaultValue()
@@ -265,7 +265,7 @@ items:
     parameters:
     - id: access
       type: CRMScript.Global.Integer
-      description: Access restrictions on the field. See enum access.
+      description: Access restrictions on the field. See <xref href=\"FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -505,3 +505,9 @@ references:
   name: FieldMetadataType
   nameWithType: FieldMetadataType
   fullName: CRMScript.NetServer.FieldMetadataType
+- uid: CRMScript.NetServer.FieldAccess
+  commentId: T:CRMScript.NetServer.FieldAccess
+  isExternal: true
+  name: FieldAccess
+  nameWithType: FieldAccess
+  fullName: CRMScript.NetServer.FieldAccess
