--- a/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
@@ -67,7 +67,7 @@ items:
   fullName: CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
   type: Method
   summary: "\nPopulates the ImportLines and columnDefs based from ERP system\n"
-  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>"
+  remarks: ""
   syntax: 
     content: NSImportErpData CreateErpImportData(NSArchiveRestrictionInfo[] restriction, String[] columns, Integer connectionId, Integer erpActorType)
     parameters:
@@ -82,7 +82,7 @@ items:
       description: Connection ID for ERP system
     - id: erpActorType
       type: CRMScript.Global.Integer
-      description: Erp Actor type
+      description: ERP actor type. See <xref href=\"ErpActorType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSImportErpData
   example: 
@@ -212,18 +212,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.NetServer.NSImportLine
-  commentId: T:CRMScript.NetServer.NSImportLine
-  isExternal: true
-  name: NSImportLine
-  nameWithType: NSImportLine
-  fullName: CRMScript.NetServer.NSImportLine
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
-  isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
 - uid: CRMScript.Global.Bool
   commentId: T:CRMScript.Global.Bool
   isExternal: true
@@ -244,15 +232,15 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ErpActorType
+  commentId: T:CRMScript.NetServer.ErpActorType
+  isExternal: true
+  name: ErpActorType
+  nameWithType: ErpActorType
+  fullName: CRMScript.NetServer.ErpActorType
