--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
@@ -2435,7 +2435,7 @@ items:
       description: 
     - id: action
       type: CRMScript.Global.Integer
-      description: See enum action.
+      description: See <xref href=\"QuoteVersionButtonAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSQuoteVersionValidated
   example: 
@@ -2851,3 +2851,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.QuoteVersionButtonAction
+  commentId: T:CRMScript.NetServer.QuoteVersionButtonAction
+  isExternal: true
+  name: QuoteVersionButtonAction
+  nameWithType: QuoteVersionButtonAction
+  fullName: CRMScript.NetServer.QuoteVersionButtonAction
