--- a/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
@@ -74,14 +74,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.GetDestination()
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDestination()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The destination of the relation
+      description: The destination of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger destination = thing.GetDestination();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: destination
       type: CRMScript.Global.Integer
-      description: The destination of the relation. See enum destination.
+      description: The destination of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
