--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -140,16 +140,16 @@ items:
   nameWithType: NSShipmentMessageEntity.GetDesigntype()
   fullName: CRMScript.NetServer.NSShipmentMessageEntity.GetDesigntype()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = SOEditor</li><li>Enum: 2 = Unlayer</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDesigntype()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Enum containing the type of the design
+      description: The type of the design. See <xref href=\"DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
-  - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger designtype = thing.GetDesigntype();</code></pre>\n"
+  - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger designType = thing.GetDesigntype();</code></pre>\n"
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.GetDocumentMessage()
   commentId: M:CRMScript.NetServer.NSShipmentMessageEntity.GetDocumentMessage()
   id: 'GetDocumentMessage()'
@@ -569,15 +569,15 @@ items:
   summary: ""
   remarks: ""
   syntax: 
-    content: Void SetDesigntype(Integer designtype)
+    content: Void SetDesigntype(Integer designType)
     parameters:
-    - id: designtype
+    - id: designType
       type: CRMScript.Global.Integer
-      description: Enum containing the type of the design See enum designtype.
+      description: The type of the design. See <xref href=\"DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
-  - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger designtype;\nthing.SetDesigntype(designtype);</code></pre>\n"
+  - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger designType;\nthing.SetDesigntype(designType);</code></pre>\n"
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.SetDocumentMessage(Integer)
   commentId: M:CRMScript.NetServer.NSShipmentMessageEntity.SetDocumentMessage(Integer)
   id: 'SetDocumentMessage(Integer)'
@@ -995,3 +995,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DesignType
+  commentId: T:CRMScript.NetServer.DesignType
+  isExternal: true
+  name: DesignType
+  nameWithType: DesignType
+  fullName: CRMScript.NetServer.DesignType
