--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -64,14 +64,14 @@ items:
   nameWithType: NSTaskListItem.GetColorIndex()
   fullName: CRMScript.NetServer.NSTaskListItem.GetColorIndex()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = LightBlue</li><li>Enum: 1 = DarkBlue</li><li>Enum: 2 = LightGray</li><li>Enum: 3 = DarkGray</li><li>Enum: 4 = LightGreen</li><li>Enum: 5 = DarkGreen</li><li>Enum: 6 = LightYellow</li><li>Enum: 7 = DarkYellow</li><li>Enum: 8 = LightRed</li><li>Enum: 9 = DarkRed</li><li>Enum: 10 = BlueAlt1</li><li>Enum: 11 = BlueAlt2</li><li>Enum: 12 = BlueAlt3</li><li>Enum: 13 = GrayAlt1</li><li>Enum: 14 = GrayAlt2</li><li>Enum: 15 = GrayAlt3</li><li>Enum: 16 = GreenAlt1</li><li>Enum: 17 = GreenAlt2</li><li>Enum: 18 = GreenAlt3</li><li>Enum: 19 = YellowAlt1</li><li>Enum: 20 = YellowAlt2</li><li>Enum: 21 = YellowAlt3</li><li>Enum: 22 = RedAlt1</li><li>Enum: 23 = RedAlt2</li><li>Enum: 24 = RedAlt3</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetColorIndex()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: JAP
+      description: JAP. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger colorIndex = thing.GetColorIndex();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetDefaultVideomeetingStatus()
@@ -84,14 +84,14 @@ items:
   nameWithType: NSTaskListItem.GetDefaultVideomeetingStatus()
   fullName: CRMScript.NetServer.NSTaskListItem.GetDefaultVideomeetingStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = NoChange</li><li>Enum: 1 = VideoMeetingOn</li><li>Enum: 2 = VideoMeetingOff</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDefaultVideomeetingStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Default video-meeting status for meetings created in SuperOffice CRM.
+      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger defaultVideomeetingStatus = thing.GetDefaultVideomeetingStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetDeleted()
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: colorIndex
       type: CRMScript.Global.Integer
-      description: JAP See enum colorIndex.
+      description: JAP. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: defaultVideomeetingStatus
       type: CRMScript.Global.Integer
-      description: Default video-meeting status for meetings created in SuperOffice CRM. See enum defaultVideomeetingStatus.
+      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -641,3 +641,15 @@ references:
   name: TaskDirection
   nameWithType: TaskDirection
   fullName: CRMScript.NetServer.TaskDirection
+- uid: CRMScript.NetServer.VideoMeetingStatus
+  commentId: T:CRMScript.NetServer.VideoMeetingStatus
+  isExternal: true
+  name: VideoMeetingStatus
+  nameWithType: VideoMeetingStatus
+  fullName: CRMScript.NetServer.VideoMeetingStatus
+- uid: CRMScript.NetServer.ColorIndex
+  commentId: T:CRMScript.NetServer.ColorIndex
+  isExternal: true
+  name: ColorIndex
+  nameWithType: ColorIndex
+  fullName: CRMScript.NetServer.ColorIndex
