--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -2131,7 +2131,7 @@ items:
       description: 
     - id: externalUserInfoModification
       type: CRMScript.Global.Integer
-      description: See enum externalUserInfoModification.
+      description: See <xref href=\"ExternalUserInfoModification\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2617,3 +2617,9 @@ references:
   name: RoleRelationToOwner
   nameWithType: RoleRelationToOwner
   fullName: CRMScript.NetServer.RoleRelationToOwner
+- uid: CRMScript.NetServer.ExternalUserInfoModification
+  commentId: T:CRMScript.NetServer.ExternalUserInfoModification
+  isExternal: true
+  name: ExternalUserInfoModification
+  nameWithType: ExternalUserInfoModification
+  fullName: CRMScript.NetServer.ExternalUserInfoModification
