--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
@@ -388,14 +388,14 @@ items:
   nameWithType: NSUserDefinedFieldInfo.GetJustification()
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfo.GetJustification()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Default</li><li>Enum: 1 = Left</li><li>Enum: 2 = Center</li><li>Enum: 3 = Right</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetJustification()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Justification, 0 = default, left, right, center
+      description: Justification. See <xref href=\"UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSUserDefinedFieldInfo thing;\nInteger justification = thing.GetJustification();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo.GetLabelHeight()
@@ -1122,7 +1122,7 @@ items:
     parameters:
     - id: justification
       type: CRMScript.Global.Integer
-      description: 0 = default, left, right, center See enum justification.
+      description: See <xref href=\"UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1609,3 +1609,9 @@ references:
   name: UDefFieldType
   nameWithType: UDefFieldType
   fullName: CRMScript.NetServer.UDefFieldType
+- uid: CRMScript.NetServer.UdefJustification
+  commentId: T:CRMScript.NetServer.UdefJustification
+  isExternal: true
+  name: UdefJustification
+  nameWithType: UdefJustification
+  fullName: CRMScript.NetServer.UdefJustification
