--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -6,20 +6,17 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.access
-  - CRMScript.NetServer.action
   - CRMScript.NetServer.ActivityStatus
-  - CRMScript.NetServer.actorType
   - CRMScript.NetServer.AddressType
   - CRMScript.NetServer.AppointmentPrivate
   - CRMScript.NetServer.AppointmentStatus
   - CRMScript.NetServer.AppointmentType
-  - CRMScript.NetServer.archivedState
   - CRMScript.NetServer.AssignmentStatus
   - CRMScript.NetServer.AssociateType
   - CRMScript.NetServer.BatchTaskState
+  - CRMScript.NetServer.BlobLinkType
   - CRMScript.NetServer.BookingType
-  - CRMScript.NetServer.calReplyStatus
+  - CRMScript.NetServer.CalReplyStatus
   - CRMScript.NetServer.AppointmentCautionWarning
   - CRMScript.NetServer.ChatMessageType
   - CRMScript.NetServer.ChatMessageSpecialType
@@ -27,16 +24,12 @@ items:
   - CRMScript.NetServer.ChatSessionStatus
   - CRMScript.NetServer.ChatWidgetSize
   - CRMScript.NetServer.CheckoutState
-  - CRMScript.NetServer.colorIndex
+  - CRMScript.NetServer.ColorIndex
   - CRMScript.NetServer.ConfigType
   - CRMScript.NetServer.ContactAction
   - CRMScript.NetServer.ContactSourceType
-  - CRMScript.NetServer.countryId
   - CRMScript.NetServer.CredentialControlType
-  - CRMScript.NetServer.defaultVideomeetingStatus
-  - CRMScript.NetServer.description
-  - CRMScript.NetServer.designtype
-  - CRMScript.NetServer.destination
+  - CRMScript.NetServer.DesignType
   - CRMScript.NetServer.DocTmplInvitationType
   - CRMScript.NetServer.DocTmplPrivacyType
   - CRMScript.NetServer.DocTmplQuoteType
@@ -45,25 +38,22 @@ items:
   - CRMScript.NetServer.Domain
   - CRMScript.NetServer.DurationUnit
   - CRMScript.NetServer.EMailMergeTargetType
-  - CRMScript.NetServer.entityId
-  - CRMScript.NetServer.erpActorType
+  - CRMScript.NetServer.ErpActorType
   - CRMScript.NetServer.EMailPriority
   - CRMScript.NetServer.ETableRight
   - CRMScript.NetServer.EventHandlerType
   - CRMScript.NetServer.ExecuteOnEvent
-  - CRMScript.NetServer.externalUserInfoModification
-  - CRMScript.NetServer.fieldKeys
+  - CRMScript.NetServer.ExternalUserInfoModification
+  - CRMScript.NetServer.FieldAccess
   - CRMScript.NetServer.FieldMetadataType
   - CRMScript.NetServer.FormSubmissionStatus
   - CRMScript.NetServer.FreeTextOperator
   - CRMScript.NetServer.GeneratorEncoding
   - CRMScript.NetServer.ImportAction
   - CRMScript.NetServer.InvitationStatus
-  - CRMScript.NetServer.justification
   - CRMScript.NetServer.LicenseStatus
   - CRMScript.NetServer.LocalizedTextType
   - CRMScript.NetServer.MailboxType
-  - CRMScript.NetServer.messageCategory
   - CRMScript.NetServer.Navigation
   - CRMScript.NetServer.NotificationPlatform
   - CRMScript.NetServer.NSAccessGatewayInfo
@@ -430,6 +420,8 @@ items:
   - CRMScript.NetServer.PrefDescValueType
   - CRMScript.NetServer.PreferenceLevel
   - CRMScript.NetServer.PublishType
+  - CRMScript.NetServer.QuoteVersionButtonAction
+  - CRMScript.NetServer.QuoteVersionState
   - CRMScript.NetServer.RecurrencePattern
   - CRMScript.NetServer.RecurrenceUpdateMode
   - CRMScript.NetServer.RelationTarget
@@ -453,15 +445,18 @@ items:
   - CRMScript.NetServer.TicketBaseStatus
   - CRMScript.NetServer.TicketCategoryClosingStatus
   - CRMScript.NetServer.TicketCategoryDelegateMethod
+  - CRMScript.NetServer.TicketMessageCategory
   - CRMScript.NetServer.TicketOrigin
   - CRMScript.NetServer.TicketPriorityEscalateEvent
   - CRMScript.NetServer.TicketReadStatus
   - CRMScript.NetServer.TicketSecurityLevel
   - CRMScript.NetServer.TicketStatusTimeCounter
   - CRMScript.NetServer.UDefFieldType
+  - CRMScript.NetServer.UdefJustification
   - CRMScript.NetServer.UDefType
   - CRMScript.NetServer.UrlEncoding
   - CRMScript.NetServer.ValueOverride
+  - CRMScript.NetServer.VideoMeetingStatus
   - CRMScript.NetServer.Visibility
   - CRMScript.NetServer.WebhookState
   - CRMScript.NetServer.WidgetRequiredFields
@@ -747,12 +742,12 @@ references:
   name: NSBLOBAgent
   nameWithType: NSBLOBAgent
   fullName: CRMScript.NetServer.NSBLOBAgent
-- uid: CRMScript.NetServer.description
-  commentId: T:CRMScript.NetServer.description
+- uid: CRMScript.NetServer.BlobLinkType
+  commentId: T:CRMScript.NetServer.BlobLinkType
   isExternal: true
-  name: description
-  nameWithType: description
-  fullName: CRMScript.NetServer.description
+  name: BlobLinkType
+  nameWithType: BlobLinkType
+  fullName: CRMScript.NetServer.BlobLinkType
 - uid: CRMScript.NetServer.NSBlobEntity
   commentId: T:CRMScript.NetServer.NSBlobEntity
   isExternal: true
@@ -1017,12 +1012,6 @@ references:
   name: ContactSourceType
   nameWithType: ContactSourceType
   fullName: CRMScript.NetServer.ContactSourceType
-- uid: CRMScript.NetServer.countryId
-  commentId: T:CRMScript.NetServer.countryId
-  isExternal: true
-  name: countryId
-  nameWithType: countryId
-  fullName: CRMScript.NetServer.countryId
 - uid: CRMScript.NetServer.NSContactEntity
   commentId: T:CRMScript.NetServer.NSContactEntity
   isExternal: true
@@ -1299,12 +1288,12 @@ references:
   name: NSEMailConnectionInfo
   nameWithType: NSEMailConnectionInfo
   fullName: CRMScript.NetServer.NSEMailConnectionInfo
-- uid: CRMScript.NetServer.calReplyStatus
-  commentId: T:CRMScript.NetServer.calReplyStatus
+- uid: CRMScript.NetServer.CalReplyStatus
+  commentId: T:CRMScript.NetServer.CalReplyStatus
   isExternal: true
-  name: calReplyStatus
-  nameWithType: calReplyStatus
-  fullName: CRMScript.NetServer.calReplyStatus
+  name: CalReplyStatus
+  nameWithType: CalReplyStatus
+  fullName: CRMScript.NetServer.CalReplyStatus
 - uid: CRMScript.NetServer.EMailPriority
   commentId: T:CRMScript.NetServer.EMailPriority
   isExternal: true
@@ -1323,36 +1312,18 @@ references:
   name: NSEntityName
   nameWithType: NSEntityName
   fullName: CRMScript.NetServer.NSEntityName
-- uid: CRMScript.NetServer.erpActorType
-  commentId: T:CRMScript.NetServer.erpActorType
+- uid: CRMScript.NetServer.ErpActorType
+  commentId: T:CRMScript.NetServer.ErpActorType
   isExternal: true
-  name: erpActorType
-  nameWithType: erpActorType
-  fullName: CRMScript.NetServer.erpActorType
-- uid: CRMScript.NetServer.actorType
-  commentId: T:CRMScript.NetServer.actorType
+  name: ErpActorType
+  nameWithType: ErpActorType
+  fullName: CRMScript.NetServer.ErpActorType
+- uid: CRMScript.NetServer.FieldAccess
+  commentId: T:CRMScript.NetServer.FieldAccess
   isExternal: true
-  name: actorType
-  nameWithType: actorType
-  fullName: CRMScript.NetServer.actorType
-- uid: CRMScript.NetServer.entityId
-  commentId: T:CRMScript.NetServer.entityId
-  isExternal: true
-  name: entityId
-  nameWithType: entityId
-  fullName: CRMScript.NetServer.entityId
-- uid: CRMScript.NetServer.fieldKeys
-  commentId: T:CRMScript.NetServer.fieldKeys
-  isExternal: true
-  name: fieldKeys
-  nameWithType: fieldKeys
-  fullName: CRMScript.NetServer.fieldKeys
-- uid: CRMScript.NetServer.access
-  commentId: T:CRMScript.NetServer.access
-  isExternal: true
-  name: access
-  nameWithType: access
-  fullName: CRMScript.NetServer.access
+  name: FieldAccess
+  nameWithType: FieldAccess
+  fullName: CRMScript.NetServer.FieldAccess
 - uid: CRMScript.NetServer.FieldMetadataType
   commentId: T:CRMScript.NetServer.FieldMetadataType
   isExternal: true
@@ -2259,12 +2230,12 @@ references:
   name: NSQuoteAgent
   nameWithType: NSQuoteAgent
   fullName: CRMScript.NetServer.NSQuoteAgent
-- uid: CRMScript.NetServer.action
-  commentId: T:CRMScript.NetServer.action
+- uid: CRMScript.NetServer.QuoteVersionButtonAction
+  commentId: T:CRMScript.NetServer.QuoteVersionButtonAction
   isExternal: true
-  name: action
-  nameWithType: action
-  fullName: CRMScript.NetServer.action
+  name: QuoteVersionButtonAction
+  nameWithType: QuoteVersionButtonAction
+  fullName: CRMScript.NetServer.QuoteVersionButtonAction
 - uid: CRMScript.NetServer.NSQuoteAlternative
   commentId: T:CRMScript.NetServer.NSQuoteAlternative
   isExternal: true
@@ -2331,12 +2302,12 @@ references:
   name: NSQuoteVersion
   nameWithType: NSQuoteVersion
   fullName: CRMScript.NetServer.NSQuoteVersion
-- uid: CRMScript.NetServer.archivedState
-  commentId: T:CRMScript.NetServer.archivedState
+- uid: CRMScript.NetServer.QuoteVersionState
+  commentId: T:CRMScript.NetServer.QuoteVersionState
   isExternal: true
-  name: archivedState
-  nameWithType: archivedState
-  fullName: CRMScript.NetServer.archivedState
+  name: QuoteVersionState
+  nameWithType: QuoteVersionState
+  fullName: CRMScript.NetServer.QuoteVersionState
 - uid: CRMScript.NetServer.NSQuoteVersionAttachment
   commentId: T:CRMScript.NetServer.NSQuoteVersionAttachment
   isExternal: true
@@ -2469,12 +2440,6 @@ references:
   name: NSRelationDefinitionEntity
   nameWithType: NSRelationDefinitionEntity
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity
-- uid: CRMScript.NetServer.destination
-  commentId: T:CRMScript.NetServer.destination
-  isExternal: true
-  name: destination
-  nameWithType: destination
-  fullName: CRMScript.NetServer.destination
 - uid: CRMScript.NetServer.RelationTarget
   commentId: T:CRMScript.NetServer.RelationTarget
   isExternal: true
@@ -2751,12 +2716,12 @@ references:
   name: NSShipmentMessageEntity
   nameWithType: NSShipmentMessageEntity
   fullName: CRMScript.NetServer.NSShipmentMessageEntity
-- uid: CRMScript.NetServer.designtype
-  commentId: T:CRMScript.NetServer.designtype
+- uid: CRMScript.NetServer.DesignType
+  commentId: T:CRMScript.NetServer.DesignType
   isExternal: true
-  name: designtype
-  nameWithType: designtype
-  fullName: CRMScript.NetServer.designtype
+  name: DesignType
+  nameWithType: DesignType
+  fullName: CRMScript.NetServer.DesignType
 - uid: CRMScript.NetServer.NSSignedPublicKey
   commentId: T:CRMScript.NetServer.NSSignedPublicKey
   isExternal: true
@@ -2889,18 +2854,18 @@ references:
   name: NSTaskListItem
   nameWithType: NSTaskListItem
   fullName: CRMScript.NetServer.NSTaskListItem
-- uid: CRMScript.NetServer.colorIndex
-  commentId: T:CRMScript.NetServer.colorIndex
+- uid: CRMScript.NetServer.ColorIndex
+  commentId: T:CRMScript.NetServer.ColorIndex
   isExternal: true
-  name: colorIndex
-  nameWithType: colorIndex
-  fullName: CRMScript.NetServer.colorIndex
-- uid: CRMScript.NetServer.defaultVideomeetingStatus
-  commentId: T:CRMScript.NetServer.defaultVideomeetingStatus
+  name: ColorIndex
+  nameWithType: ColorIndex
+  fullName: CRMScript.NetServer.ColorIndex
+- uid: CRMScript.NetServer.VideoMeetingStatus
+  commentId: T:CRMScript.NetServer.VideoMeetingStatus
   isExternal: true
-  name: defaultVideomeetingStatus
-  nameWithType: defaultVideomeetingStatus
-  fullName: CRMScript.NetServer.defaultVideomeetingStatus
+  name: VideoMeetingStatus
+  nameWithType: VideoMeetingStatus
+  fullName: CRMScript.NetServer.VideoMeetingStatus
 - uid: CRMScript.NetServer.NSTemplateInfo
   commentId: T:CRMScript.NetServer.NSTemplateInfo
   isExternal: true
@@ -3003,12 +2968,12 @@ references:
   name: NSTicketMessageEntity
   nameWithType: NSTicketMessageEntity
   fullName: CRMScript.NetServer.NSTicketMessageEntity
-- uid: CRMScript.NetServer.messageCategory
-  commentId: T:CRMScript.NetServer.messageCategory
+- uid: CRMScript.NetServer.TicketMessageCategory
+  commentId: T:CRMScript.NetServer.TicketMessageCategory
   isExternal: true
-  name: messageCategory
-  nameWithType: messageCategory
-  fullName: CRMScript.NetServer.messageCategory
+  name: TicketMessageCategory
+  nameWithType: TicketMessageCategory
+  fullName: CRMScript.NetServer.TicketMessageCategory
 - uid: CRMScript.NetServer.NSTicketPriority
   commentId: T:CRMScript.NetServer.NSTicketPriority
   isExternal: true
@@ -3111,24 +3076,24 @@ references:
   name: RoleRelationToOwner
   nameWithType: RoleRelationToOwner
   fullName: CRMScript.NetServer.RoleRelationToOwner
-- uid: CRMScript.NetServer.externalUserInfoModification
-  commentId: T:CRMScript.NetServer.externalUserInfoModification
+- uid: CRMScript.NetServer.ExternalUserInfoModification
+  commentId: T:CRMScript.NetServer.ExternalUserInfoModification
   isExternal: true
-  name: externalUserInfoModification
-  nameWithType: externalUserInfoModification
-  fullName: CRMScript.NetServer.externalUserInfoModification
+  name: ExternalUserInfoModification
+  nameWithType: ExternalUserInfoModification
+  fullName: CRMScript.NetServer.ExternalUserInfoModification
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo
   commentId: T:CRMScript.NetServer.NSUserDefinedFieldInfo
   isExternal: true
   name: NSUserDefinedFieldInfo
   nameWithType: NSUserDefinedFieldInfo
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfo
-- uid: CRMScript.NetServer.justification
-  commentId: T:CRMScript.NetServer.justification
+- uid: CRMScript.NetServer.UdefJustification
+  commentId: T:CRMScript.NetServer.UdefJustification
   isExternal: true
-  name: justification
-  nameWithType: justification
-  fullName: CRMScript.NetServer.justification
+  name: UdefJustification
+  nameWithType: UdefJustification
+  fullName: CRMScript.NetServer.UdefJustification
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfoAgent
   commentId: T:CRMScript.NetServer.NSUserDefinedFieldInfoAgent
   isExternal: true
