--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -862,14 +862,8 @@ items:
     href: CRMScript.NetServer.NSWindowPosSize.yml
   - name: Enums
     items:
-    - name: Enum access
-      href: CRMScript.NetServer.access.yml
-    - name: Enum action
-      href: CRMScript.NetServer.action.yml
     - name: ActivityStatus
       href: CRMScript.NetServer.ActivityStatus.yml
-    - name: Enum actorType
-      href: CRMScript.NetServer.actorType.yml
     - name: AddressType
       href: CRMScript.NetServer.AddressType.yml
     - name: AppointmentCautionWarning
@@ -880,22 +874,22 @@ items:
       href: CRMScript.NetServer.AppointmentStatus.yml
     - name: AppointmentType
       href: CRMScript.NetServer.AppointmentType.yml
-    - name: Enum archivedState
-      href: CRMScript.NetServer.archivedState.yml
     - name: AssignmentStatus
       href: CRMScript.NetServer.AssignmentStatus.yml
     - name: AssociateType
       href: CRMScript.NetServer.AssociateType.yml
     - name: Enum BatchTaskState
       href: CRMScript.NetServer.BatchTaskState.yml
+    - name: BlobLinkType
+      href: CRMScript.NetServer.BlobLinkType.yml
     - name: BookingType
       href: CRMScript.NetServer.BookingType.yml
     - name: ChatMessageType
       href: CRMScript.NetServer.ChatMessageType.yml
     - name: ChatMessageSpecialType
       href: CRMScript.NetServer.ChatMessageSpecialType.yml
-    - name: Enum calReplyStatus
-      href: CRMScript.NetServer.calReplyStatus.yml
+    - name: CalReplyStatus
+      href: CRMScript.NetServer.CalReplyStatus.yml
     - name: ChatSessionFlags
       href: CRMScript.NetServer.ChatSessionFlags.yml
     - name: Enum ChatSessionStatus
@@ -904,26 +898,18 @@ items:
       href: CRMScript.NetServer.ChatWidgetSize.yml
     - name: CheckoutState
       href: CRMScript.NetServer.CheckoutState.yml
-    - name: Enum colorIndex
-      href: CRMScript.NetServer.colorIndex.yml
+    - name: ColorIndex
+      href: CRMScript.NetServer.ColorIndex.yml
     - name: ContactAction
       href: CRMScript.NetServer.ContactAction.yml
     - name: ConfigType
       href: CRMScript.NetServer.ConfigType.yml
     - name: ContactSourceType
       href: CRMScript.NetServer.ContactSourceType.yml
-    - name: Enum countryId
-      href: CRMScript.NetServer.countryId.yml
     - name: CredentialControlType
       href: CRMScript.NetServer.CredentialControlType.yml
-    - name: Enum defaultVideomeetingStatus
-      href: CRMScript.NetServer.defaultVideomeetingStatus.yml
-    - name: Enum description
-      href: CRMScript.NetServer.description.yml
-    - name: Enum designtype
-      href: CRMScript.NetServer.designtype.yml
-    - name: Enum destination
-      href: CRMScript.NetServer.destination.yml
+    - name: DesignType
+      href: CRMScript.NetServer.DesignType.yml
     - name: DocTmplInvitationType
       href: CRMScript.NetServer.DocTmplInvitationType.yml
     - name: DocTmplPrivacyType
@@ -940,10 +926,8 @@ items:
       href: CRMScript.NetServer.EMailMergeTargetType.yml
     - name: Enum entity
       href: CRMScript.NetServer.entity.yml
-    - name: Enum entityId
-      href: CRMScript.NetServer.entityId.yml
-    - name: Enum erpActorType
-      href: CRMScript.NetServer.erpActorType.yml
+    - name: ErpActorType
+      href: CRMScript.NetServer.ErpActorType.yml
     - name: EMailPriority
       href: CRMScript.NetServer.EMailPriority.yml
     - name: ETableRight
@@ -952,10 +936,10 @@ items:
       href: CRMScript.NetServer.EventHandlerType.yml
     - name: ExecuteOnEvent
       href: CRMScript.NetServer.ExecuteOnEvent.yml
-    - name: Enum externalUserInfoModification
-      href: CRMScript.NetServer.externalUserInfoModification.yml
-    - name: Enum fieldKeys
-      href: CRMScript.NetServer.fieldKeys.yml
+    - name: ExternalUserInfoModification
+      href: CRMScript.NetServer.ExternalUserInfoModification.yml
+    - name: FieldAccess
+      href: CRMScript.NetServer.FieldAccess.yml
     - name: FieldMetadataType
       href: CRMScript.NetServer.FieldMetadataType.yml
     - name: FormsRecaptchaMode
@@ -970,14 +954,10 @@ items:
       href: CRMScript.NetServer.ImportAction.yml
     - name: InvitationStatus
       href: CRMScript.NetServer.InvitationStatus.yml
-    - name: Enum justification
-      href: CRMScript.NetServer.justification.yml
-    - name: Enum LicenseStatus
+    - name: LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
     - name: LocalizedTextType
       href: CRMScript.NetServer.LocalizedTextType.yml
-    - name: Enum messageCategory
-      href: CRMScript.NetServer.messageCategory.yml
     - name: Navigation
       href: CRMScript.NetServer.Navigation.yml
     - name: OrderBySortType
@@ -992,6 +972,10 @@ items:
       href: CRMScript.NetServer.PreferenceLevel.yml
     - name: PublishType
       href: CRMScript.NetServer.PublishType.yml
+    - name: QuoteVersionButtonAction
+      href: CRMScript.NetServer.QuoteVersionButtonAction.yml
+    - name: QuoteVersionState
+      href: CRMScript.NetServer.QuoteVersionState.yml
     - name: RecurrencePattern
       href: CRMScript.NetServer.RecurrencePattern.yml
     - name: RecurrenceUpdateMode
@@ -1040,6 +1024,8 @@ items:
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
     - name: TicketCategoryDelegateMethod
       href: CRMScript.NetServer.TicketCategoryDelegateMethod.yml
+    - name: TicketMessageCategory
+      href: CRMScript.NetServer.TicketMessageCategory.yml
     - name: TicketOrigin
       href: CRMScript.NetServer.TicketOrigin.yml
     - name: TicketPriorityEscalateEvent
@@ -1052,12 +1038,16 @@ items:
       href: CRMScript.NetServer.TicketStatusTimeCounter.yml
     - name: UDefFieldType
       href: CRMScript.NetServer.UDefFieldType.yml
+    - name: UdefJustification
+      href: CRMScript.NetServer.UdefJustification.yml
     - name: UDefType
       href: CRMScript.NetServer.UDefType.yml
     - name: UrlEncoding
       href: CRMScript.NetServer.UrlEncoding.yml
     - name: ValueOverride
       href: CRMScript.NetServer.ValueOverride.yml
+    - name: VideoMeetingStatus
+      href: CRMScript.NetServer.VideoMeetingStatus.yml
     - name: Visibility
       href: CRMScript.NetServer.Visibility.yml
     - name: WebhookState
