--- a/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
@@ -386,7 +386,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task
+      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSAppointment thing;\nInteger colorIndex = thing.GetColorIndex();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointment.GetCompleted()
@@ -1428,7 +1428,7 @@ items:
     parameters:
     - id: colorIndex
       type: CRMScript.Global.Integer
-      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task
+      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2365,3 +2365,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ColorIndex
+  commentId: T:CRMScript.NetServer.ColorIndex
+  isExternal: true
+  name: ColorIndex
+  nameWithType: ColorIndex
+  fullName: CRMScript.NetServer.ColorIndex
